add game objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ target_sources(fireFightingGameThing PRIVATE
         "src/main.cpp"
         "src/engine/SpriteRenderer.cpp"
         "src/engine/Camera2D.cpp"
+        "src/gameLogic/GameObject.cpp"
         )
 
 # add definitions
