move tile editing to engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,9 @@ target_sources(fireFightingGameThing PRIVATE
         "src/contentCreation/MapEditor.cpp"
         "src/MouseController.cpp"
         "src/resourceManagemant.cpp"
-        "src/dataModel/TileType.cpp"
+        "src/tilemap/TileType.cpp"
         "src/dataModel/RootedObjectType.cpp"
-        "src/dataModel/Map.cpp"
+        "src/tilemap/Map.cpp"
         "src/gameElements/RootedObject.cpp"
         "src/gameplay/Operation.cpp"
         "src/gameplay/FreePlay.cpp"
